[package]
edition = "2021"
name = "image-host"
version = "0.5.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
bson = "^2.7.0"
dotenv = "^0.15.0"
futures = "^0.3.28"
image = "^0.24.7"
lazy_static = "1.4.0"
log = "^0.4"
mongodb = "^2.7.0"
oxipng = "^9.0.0"
rand = "^0.8.5"
rayon = "^1.8.0"
rocket = { version = "^0.5.0-rc.3", features = ["json"] }
rocket-multipart-form-data = "^0.10.6"
serde = "^1.0"
tokio = "^1.33.0"
webp = "^0.2.6"

[dependencies.rocket_dyn_templates]
features = ["tera"]
version = "^0.1.0-rc.3"
